--- a/package.json
+++ b/package.json
@@ -2,18 +2,20 @@
   "name": "react-find",
   "version": "0.1.0",
   "private": true,
+  "scripts": {
+    "start": "cross-env NODE_PATH=src react-scripts start",
+    "build": "cross-env NODE_PATH=src react-scripts build",
+    "test": "react-scripts test --env=jsdom",
+    "eject": "react-scripts eject"
+  },
   "dependencies": {
+    "immutable": "^4.0.0-rc.12",
+    "query-string": "^6.2.0",
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
+    "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.3",
-    "immutable": "^4.0.0-rc.12",
     "styled-components": "^4.1.3"
-  },
-  "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -25,6 +27,7 @@
     "not op_mini all"
   ],
   "devDependencies": {
-   
+    "cross-env": "^5.2.0",
+    "prettier-eslint": "^8.8.2"
   }
 }
