--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "query-string": "^6.2.0",
     "react": "^16.7.0",
     "react-app-polyfill": "^0.2.0",
+    "react-countup": "^4.0.0",
     "react-dev-utils": "^7.0.1",
     "react-dom": "^16.7.0",
     "react-media": "^1.9.2",
